@@ -1242,6 +1242,7 @@ callGeneric <- function(...)
     eval(call, sys.frame(sys.parent()))
 }
 
+## This uses 'where' to record the methods namespace: default may not be that
 initMethodDispatch <- function(where = topenv(parent.frame()))
     .Call(C_R_initMethodDispatch, as.environment(where))# C-level initialization
 
